[package]
name = "piwacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrentfind = { path = "./torrentfind-0.1.0" }
tokio = { version = "1.19.2", features = ["time", "net", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.12", features = ["cookies", "json"]}
http = "0.2.8"
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serenity = { version = "0.11.5", default-features = false, features = ["client", "cache", "gateway", "rustls_backend", "model", "http"] }
html-extractor = "1.0.0"
regex = "1.6.0"
fs = "0.0.5"
env = "0.0.0"
